fix subheadline alignment

--- a/views/stylesheets/mq.scss
+++ b/views/stylesheets/mq.scss
@@ -219,6 +219,7 @@
 					font-size: 2em;
 				}
 				h3 {
+					margin-left: 0px;
 					font-size: 1.5em;
 					line-height: 1.5em;
 					max-width: 100%;
